--- a/ProBlog/src/Blogger/BlogBundle/Resources/views/contact.html.twig
+++ b/ProBlog/src/Blogger/BlogBundle/Resources/views/contact.html.twig
@@ -1,5 +1,5 @@
 {# src/Blogger/BlogBundle/Resources/views/Page/contact.html.twig #}
-{% extends 'BloggerBlogBundle::layout.html.twig' %}
+{% extends '@BloggerBlog/layout.html.twig' %}
 
 {% block title %}Contact{% endblock%}
 
