--- a/ProBlog/src/Blogger/BlogBundle/Resources/views/about.html.twig
+++ b/ProBlog/src/Blogger/BlogBundle/Resources/views/about.html.twig
@@ -1,8 +1,7 @@
-{# src/Blogger/BlogBundle/Resources/views/Page/about.html.twig #}
-{% extends 'BloggerBlogBundle::layout.html.twig' %}
+{# src/Blogger/BlogBundle/Resources/views/about.html.twig #}
+{% extends '@BloggerBlog/layout.html.twig' %}
 
 {% block title %}About{% endblock%}
-
 {% block body %}
     <header>
         <h1>About symblog</h1>
