update contact section

--- a/ProBlog/src/Blogger/BlogBundle/Resources/views/contact.html.twig
+++ b/ProBlog/src/Blogger/BlogBundle/Resources/views/contact.html.twig
@@ -7,6 +7,9 @@
     <header>
         <h1>Contact symblog</h1>
     </header>
-
     <p>Want to contact symblog?</p>
+    {{form_start(form,{'action':'','method':'POST'})}}
+    {{form_widget(form)}}
+    {{form_errors(form)}}
+    {{form_end(form)}}
 {% endblock %}
