--- a/ProBlog/src/Blogger/BlogBundle/Resources/views/base.html.twig
+++ b/ProBlog/src/Blogger/BlogBundle/Resources/views/base.html.twig
@@ -11,6 +11,11 @@
             <link href='http://fonts.googleapis.com/css?family=Irish+Grover' rel='stylesheet' type='text/css'>
             <link href='http://fonts.googleapis.com/css?family=La+Belle+Aurore' rel='stylesheet' type='text/css'>
             <link href="{{ asset('css/screen.css') }}" type="text/css" rel="stylesheet" />
+            <link href="{{ asset('css/blog.css') }}" type="text/css" rel="stylesheet" />
+            <link href="{{ asset('css/web.css') }}" type="text/css" rel="stylesheet" />
+            <link href="{{ asset('css/sidebar.css') }}" type="text/css" rel="stylesheet" />
+
+
         {% endblock %}
         <link rel="shortcut icon" href="{{ asset('favicon.ico') }}" />
     </head>
