--- a/ProBlog/src/Blogger/BlogBundle/Resources/views/Comment/create.html.twig
+++ b/ProBlog/src/Blogger/BlogBundle/Resources/views/Comment/create.html.twig
@@ -1,4 +1,4 @@
-{% extends 'BloggerBlogBundle:base.html.twig' %}
+{% extends '@BloggerBlog/base.html.twig' %}
 {% block title %} Add Comment {% endblock %}
 {% block body %}
   <h1> Add comment for blog post "{{comment.blog.title}}"</h1>
