--- a/ProBlog/src/Blogger/BlogBundle/Resources/views/Comment/form.html.twig
+++ b/ProBlog/src/Blogger/BlogBundle/Resources/views/Comment/form.html.twig
@@ -1,7 +1,3 @@
-{{ form_start(form, {'action':path('comment',
-                                    {'blog_id' : comment.blog.id}),
-                    'method': 'POST'}
-              )
-}}
+{{ form_start(form, {'action':path('comment', {'blog_id' : comment.blog.id}),'method': 'POST'})}}
 {{form_widget(form)}}
 {{form_end(form)}}
