--- a/ProBlog/src/Blogger/BlogBundle/Resources/views/css/screen.css
+++ b/ProBlog/src/Blogger/BlogBundle/Resources/views/css/screen.css
@@ -3,7 +3,7 @@ To change this license header, choose License Headers in Project Properties.
 To change this template file, choose Tools | Templates
 and open the template in the editor.
 */
-/* 
+/*
     Created on : 03-feb-2017, 12:28:10
     Author     : jose
 */
@@ -33,5 +33,5 @@ body { line-height: 1;font-family: Arial, Helvetica, sans-serif;font-size: 12px;
 .main-col h2
     { line-height: 1.2em; font-size: 32px; margin-bottom: 10px; font-weight: normal; color: #F48A00; }
 .main-col p { line-height: 1.5em; margin-bottom: 20px; }
-
+.main-col li img {width: 80% !important;}
 #footer { border-top: 1px solid #ccc; clear: both; text-align: center; padding: 10px; color: #aaa; }
