--- a/ProBlog/src/Blogger/BlogBundle/Resources/views/index.html.twig
+++ b/ProBlog/src/Blogger/BlogBundle/Resources/views/index.html.twig
@@ -1,16 +1,19 @@
-
-{# src/Blogger/BlogBundle/Resources/views/index.html.twig #}
 {% extends '@BloggerBlog/layout.html.twig' %}
 
 {% block body %}
     {% for blog in blogs%}
-      <li>{{blog.title}}</li>
-      <img src="{{asset(["images/",blog.image]|join)}}" />
+      <h2>{{blog.title}}</h2>
+      <img style="width:100%;" src="{{asset(["images/",blog.image]|join)}}" />
         <div class="snippet">
           <p>{{blog.blog(500)}}</p>
           <p class="continue"><a href="{{path("show",{"id":blog.id})}}">Continue</a>
         </div>
-
+        <footer class="meta">
+            <p>Comments: {{blog.comments |length}}</p>
+            <p>Posted by <span class="highlight">{{blog.author}}</span> at
+            {{ blog.created|date('h:iA') }}</p>
+            <p>Tags: <span class="highlight">{{ blog.tags }}</span></p>
+</footer>
     {% endfor%}
 {% endblock %}
 
